Revise: Change OrderItems datatype from Set to List, and apply the changes on the other classes